# sftpflow

./: .gitignore  Cargo.toml  Dockerfile.dkron  Dockerfile.dkron-worker  Makefile  README.md  dkron-worker.yml  dkron.yml  docker-compose.yml
crates/sftpflow-cli/: Cargo.toml
crates/sftpflow-cli/src/: cli.rs  commands.rs  completer.rs  main.rs  output.rs  rpc.rs
crates/sftpflow-cluster/: Cargo.toml  build.rs
crates/sftpflow-cluster/src/: lib.rs  node.rs  state.rs  store.rs  tls.rs  token.rs  transport.rs
crates/sftpflow-cluster/src/proto/: cluster.proto
crates/sftpflow-cluster/tests/: join_handshake.rs  ndjson_forward.rs  three_node_cluster.rs
crates/sftpflow-core/: Cargo.toml
crates/sftpflow-core/src/: lib.rs
crates/sftpflow-proto/: Cargo.toml
crates/sftpflow-proto/src/: lib.rs
crates/sftpflow-shell/: Cargo.toml
crates/sftpflow-shell/src/: main.rs
crates/sftpflow-transport/: Cargo.toml
crates/sftpflow-transport/src/: ftp.rs  http.rs  lib.rs  pgp.rs  sftp.rs
crates/sftpflowd/: Cargo.toml
crates/sftpflowd/src/: audit.rs  backup.rs  cluster_runtime.rs  dkron.rs  handlers.rs  health.rs  history.rs  main.rs  node_state.rs  secrets.rs  server.rs  time_fmt.rs
docker/: Dockerfile.sftpflow-server  README.md  compose.cluster.yml  compose.test.yml  entrypoint-cluster.sh  entrypoint.sh  sshd_config  sshd_config_joiner
docs/: m12-raft-scaffolding.md
scripts/: clean-dropbox-tmp.sh  drive-cli-validate-join.py  test-cluster-join-remote.sh  test-cluster.sh
src/: cli.rs  commands.rs  dkron.rs  feed.rs  main.rs
