# ============================================================
# Workspace root
# ============================================================
#
# Crates:
#   sftpflow-core      - shared data models and YAML persistence
#   sftpflow-proto     - JSON-RPC message types (CLI <-> daemon)
#   sftpflow-cli       - interactive shell binary (current `sftpflow`)
#   sftpflowd          - long-running daemon (scheduler + transfer engine)
#   sftpflow-shell     - thin ForceCommand bridge (stdin <-> unix socket)
#   sftpflow-transport - transfer engines (SFTP first, then FTP/HTTP/HTTPS)

[workspace]
resolver = "2"
members = [
    "crates/sftpflow-core",
    "crates/sftpflow-proto",
    "crates/sftpflow-cli",
    "crates/sftpflowd",
    "crates/sftpflow-shell",
    "crates/sftpflow-transport",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["Mark Ridlen <mark@ridlen.net>"]
license = "MIT"
repository = "https://github.com/mridlen/sftpflow"

# ------------------------------------------------------------
# Shared dependency versions (each crate opts in under its own
# [dependencies] by using `foo = { workspace = true }`)
# ------------------------------------------------------------
[workspace.dependencies]
serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
log        = "0.4"
env_logger = "0.11"
rustyline  = "15"
ureq       = { version = "2", features = ["json"] }
async-trait = "0.1"
tokio      = { version = "1", features = ["rt", "macros", "io-util", "fs"] }
russh      = "0.50"
russh-sftp = "2.1"
tempfile   = "3"
rusqlite       = { version = "0.31", features = ["bundled"] }
sequoia-openpgp = { version = "1", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
anyhow          = "1"
age             = { version = "0.10", default-features = false }
rpassword       = "7"
