# ============================================================
# Workspace root
# ============================================================
#
# Crates:
#   sftpflow-core      - shared data models and YAML persistence
#   sftpflow-proto     - JSON-RPC message types (CLI <-> daemon)
#   sftpflow-cli       - interactive shell binary (current `sftpflow`)
#   sftpflowd          - long-running daemon (scheduler + transfer engine)
#   sftpflow-shell     - thin ForceCommand bridge (stdin <-> unix socket)
#   sftpflow-transport - transfer engines (SFTP first, then FTP/HTTP/HTTPS)

[workspace]
resolver = "2"
members = [
    "crates/sftpflow-core",
    "crates/sftpflow-proto",
    "crates/sftpflow-cli",
    "crates/sftpflowd",
    "crates/sftpflow-shell",
    "crates/sftpflow-transport",
    "crates/sftpflow-cluster",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["Mark Ridlen <mark@ridlen.net>"]
license = "MIT"
repository = "https://github.com/mridlen/sftpflow"

# ------------------------------------------------------------
# Shared dependency versions (each crate opts in under its own
# [dependencies] by using `foo = { workspace = true }`)
# ------------------------------------------------------------
[workspace.dependencies]
serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
log        = "0.4"
env_logger = "0.11"
rustyline  = "15"
ureq       = { version = "2", features = ["json"] }
async-trait = "0.1"
tokio      = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util", "fs", "sync", "net", "time"] }
russh      = "0.50"
russh-sftp = "2.1"
tempfile   = "3"
rusqlite       = { version = "0.31", features = ["bundled"] }
sequoia-openpgp = { version = "1", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
anyhow          = "1"
age             = { version = "0.10", default-features = false }
rpassword       = "7"
suppaftp        = { version = "6", default-features = false, features = ["rustls", "deprecated"] }
rustls          = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
webpki-roots    = "0.26"
base64          = "0.22"

# ------------------------------------------------------------
# Cluster / Raft dependencies (M12+)
# Used by sftpflow-cluster and sftpflowd. Pure-Rust where possible
# to keep the Windows MSVC build story unchanged from M11.
# ------------------------------------------------------------
openraft        = { version = "0.9", features = ["serde"] }
tonic           = "0.12"
tonic-build     = "0.12"
# Vendored protoc binary so contributors don't need a system protoc install.
# Pulled in by sftpflow-cluster's build.rs and re-exported via PROTOC env var.
protoc-bin-vendored = "3"
prost           = "0.13"
rcgen           = "0.13"
rustls-pemfile  = "2"
tokio-rustls    = "0.26"
uuid            = { version = "1", features = ["v4", "serde"] }
clap            = { version = "4", features = ["derive"] }
sled            = "0.34"
chrono          = { version = "0.4", features = ["serde"] }
hmac            = "0.12"
sha2            = "0.10"
rand            = "0.8"
