# ============================================================
# sftpflow-cli
# ============================================================
#
# The interactive shell binary (Cisco IOS / cmsh style).
# Depends on sftpflow-core for the data models and config I/O.

[package]
name = "sftpflow-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# The binary is still named `sftpflow` so user-facing invocation
# (`sftpflow run <feed>`, `sftpflow` interactive shell) is unchanged.
[[bin]]
name = "sftpflow"
path = "src/main.rs"

[dependencies]
sftpflow-core  = { path = "../sftpflow-core" }
sftpflow-proto = { path = "../sftpflow-proto" }

rustyline   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
log         = { workspace = true }
env_logger  = { workspace = true }
