# ============================================================
# sftpflowd
# ============================================================
#
# The long-running daemon. Owns the config, the scheduler, and
# (later) the transfer engine. Speaks the NDJSON RPC protocol
# defined in sftpflow-proto.
#
# Listens on a Unix socket on Linux (the production target) or
# TCP loopback on Windows (so it can be developed locally).

[package]
name = "sftpflowd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sftpflowd"
path = "src/main.rs"

[dependencies]
sftpflow-core      = { path = "../sftpflow-core" }
sftpflow-proto     = { path = "../sftpflow-proto" }
sftpflow-transport = { path = "../sftpflow-transport" }
# Cluster runtime (M12+). Pulls in openraft, tonic, sled, rcgen.
sftpflow-cluster   = { path = "../sftpflow-cluster" }

serde      = { workspace = true }
serde_json = { workspace = true }
log        = { workspace = true }
env_logger = { workspace = true }
tokio      = { workspace = true }
ureq       = { workspace = true }
rusqlite   = { workspace = true }
age        = { workspace = true }

# CLI subcommand dispatch (M12 PR-B: init / join / run).
clap       = { workspace = true }
# Cluster ID generation during `sftpflowd init`.
uuid       = { workspace = true }
# TLS crypto provider install at startup (tonic builds on rustls).
rustls     = { workspace = true }
# Encode the raw 32-byte token secret for storage in the string-valued
# sealed-secrets store (key name: __cluster_token_key__).
base64     = { workspace = true }
# Backup/restore archive support — `sftpflowd backup` produces a
# tar.gz of node state; `sftpflowd restore` extracts it. sha2 hashes
# each file for the manifest so a corrupted archive fails fast.
# tempfile stages the SQLite VACUUM INTO snapshot before tar'ing it.
tar      = { workspace = true }
flate2   = { workspace = true }
sha2     = { workspace = true }
tempfile = { workspace = true }
# Scrub sensitive material (decoded token secret bytes, the
# args_hash JSON serialization for PutSecret) before the
# allocation is freed.
zeroize  = { workspace = true }

